Se agrego funcionalidad para hacer reset de password de usuarios

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -73,6 +73,7 @@ ui.grades.register.panel.heading=Registrar notas: {0} - {1} - {2} ({3})
 ui.grades.registerGradeToStudent.panel.heading=Registrar nota [{0}] {1} - {2} ({3})
 ui.grades.edit.panel.heading=Editar evaluación
 ui.grades.editScore.panel.heading=Editar Nota
+ui.users.password.panel.heading=Restablecer contraseña [{0}]
 
 ui.breadcrumb.users=Usuarios
 ui.breadcrumb.users.create=Crear usuario
@@ -98,6 +99,7 @@ ui.breadcrumb.grades.scorebook=Cuadro de notas {0}
 ui.breadcrumb.registerGradeToStudent.register=Registrar nota: {0}
 ui.breadcrumb.grades.edit=Editar evaluación
 ui.breadcrumb.editScore=Editar nota: {0}
+ui.breadcrumb.users.password=Restablecer contraseña
 
 ui.grades.create.form.description=Descripción
 ui.grades.create.form.description.placeholder=Ej: Evaluación 1
@@ -193,6 +195,7 @@ ui.users.index.table.username=Uusuario
 ui.users.index.table.role=Roles
 ui.users.index.table.email=Correo
 ui.users.index.table.empty=Aún no se han creado usuarios
+ui.users.index.table.password=Contraseña
 
 ui.users.actions.createAUser=Crear un usuario
 
@@ -276,3 +279,7 @@ messages.logout=Sessión finalizada con éxito.
 
 ui.users.edit.form.active=Activo
 ui.users.edit.form.disabled=Deshabilitado
+
+ui.users.password.form.name=Nombre
+ui.users.password.form.username=Usuario
+ui.users.password.form.password=Contraseña
