modificaciones visuales menores en users/index y se agrego dashboard al home de usuarios. Se agrego footer

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -283,3 +283,10 @@ ui.users.edit.form.disabled=Deshabilitado
 ui.users.password.form.name=Nombre
 ui.users.password.form.username=Usuario
 ui.users.password.form.password=Contraseña
+
+ui.dashboard.students=Estudiantes
+ui.dashboard.students.total={0} estudiantes registrados
+ui.dashboard.teachers=Educadores
+ui.dashboard.teachers.total={0} educadores registrados
+ui.dashboard.classrooms=Salónes de clase
+ui.dashboard.classrooms.total={0} salones registrados
