ADD: ui success msgs when create or update. Minor bug fixes

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -89,8 +89,8 @@ ui.breadcrumb.subjects.create=Agregar materia
 ui.breadcrumb.subjects.edit=Editar materia
 ui.breadcrumb.subjects.delete=Eliminar materia
 ui.breadcrumb.users.delete=Eliminar
-ui.breadcrumb.students.subscribe=Suscribir estudiante
-ui.breadcrumb.students.unsubscribe=Eliminar suscripción
+ui.breadcrumb.students.subscribe=Agregar estudiante
+ui.breadcrumb.students.unsubscribe=Eliminar estudiante de curso
 ui.breadcrumb.classSchedule=Horario de clases
 ui.breadcrumb.grades=Notas
 ui.breadcrumb.grades.register=Crear cuadro de notas
@@ -290,3 +290,33 @@ ui.dashboard.teachers=Educadores
 ui.dashboard.teachers.total={0} educadores registrados
 ui.dashboard.classrooms=Salónes de clase
 ui.dashboard.classrooms.total={0} salones registrados
+
+messages.users.create=Usuario creado exitosamente
+messages.users.updated=Usuario actualizado éxitosamente.
+messages.users.deleted=Usuario eliminado éxitosamente.
+
+messages.cycles.created=Ciclo creado exitosamente.
+messages.cycles.updated=Ciclo actualizado exitosamente.
+
+messages.classrooms.created=Salón de clase registrado con éxito.
+messages.classrooms.updated=Salón de clase actualizado con éxito.
+
+messages.courses.created=Curso creado exitosamente.
+messages.courses.updated=Curso actualizado exitosamente.
+messages.courses.deleted=Curso eliminado exitosamente.
+
+messages.subjects.created=Materia creada exitosamente.
+messages.subjects.updated=Materia actualizada exitosamente.
+messages.subjects.deleted=Materia eliminada exitosamente.
+
+messages.courses.subscribed=Estudiante suscrito al curso exitosamente.
+messages.courses.unsubscribed=Suscripciíón del estudiante eliminada con éxito.
+
+messages.subjects.screated=Horario registrado exitosamente.
+messages.subjects.sdeleted=Horario eliminado exitosamente.
+
+messages.grades.created=Cuadro de notas registrado exitosamente.
+messages.grades.updated=Cuadro de notas actualizado exitosamente.
+
+messages-scores.registered=Nota registrada exitosamente.
+messages-scores.updated=Nota actualizada exitosamente.
