custom 404, 500 error pages

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -320,3 +320,6 @@ messages.grades.updated=Cuadro de notas actualizado exitosamente.
 
 messages-scores.registered=Nota registrada exitosamente.
 messages-scores.updated=Nota actualizada exitosamente.
+
+errors.404=Página no encontrada [ERROr 404]
+errors.500=Error interno [ERROr 500]
