basic teacher role functionallity

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -326,3 +326,13 @@ messages-scores.updated=Nota actualizada exitosamente.
 
 errors.404=Página no encontrada [ERROr 404]
 errors.500=Error interno [ERROr 500]
+
+ui.dashboard.teacher.courses.panel.heading=Mis cursos como educador
+ui.dashboard.teacher.subjects.panel.heading=Mis materias como educador
+
+ui.dashboard.teacher.courses.table.course=Curso
+ui.dashboard.teacher.courses.table.empty=Aún no tienes cursos asignados
+
+ui.dashboard.teacher.subjects.table.subject=Materia
+ui.dashboard.teacher.subjects.table.classroom=Salón de clase
+ui.dashboard.teacher.subjects.table.empty=Sin materias a impartir
